workspace-sf/force-app/main/default/objects/Pep__c/Pep__c.object-meta.xml
<CustomObject>
    <label>Pep</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>