workspace-sf/force-app/main/default/objects/Pep__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Peps</relationshipLabel>
    <relationshipName>PepsAccount</relationshipName>
    <type>Lookup</type>
</CustomField>