workspace-sf/force-app/main/default/objects/Pep__c/fields/Avaliado__c.field-meta.xml
<CustomField>
    <fullName>Avaliado__c</fullName>
    <label>Avaliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>