workspace-sf/force-app/main/default/objects/Pep__c/fields/BeneficiarioSeguradoProposta__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarioSeguradoProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiário do segurado da proposta</label>
    <referenceTo>BeneficiarioSeguradoProposta__c</referenceTo>
    <relationshipLabel>Peps</relationshipLabel>
    <relationshipName>Peps</relationshipName>
    <type>Lookup</type>
</CustomField>