workspace-sf/force-app/main/default/objects/Pep__c/fields/CodigoPEP__c.field-meta.xml
<CustomField>
    <fullName>CodigoPEP__c</fullName>
    <label>Código PEP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>