workspace-sf/force-app/main/default/objects/Pep__c/fields/DateUpdate__c.field-meta.xml
<CustomField>
    <fullName>DateUpdate__c</fullName>
    <label>Data Atualização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>