workspace-sf/force-app/main/default/objects/Pep__c/fields/LastAppointment__c.field-meta.xml
<CustomField>
    <fullName>LastAppointment__c</fullName>
    <label>Última consulta</label>
    <type>DateTime</type>
</CustomField>