workspace-sf/force-app/main/default/objects/Pep__c/fields/PepList__c.field-meta.xml
<CustomField>
    <fullName>PepList__c</fullName>
    <label>Pep?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Relacionamento próximo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>