workspace-sf/force-app/main/default/objects/Pep__c/fields/Segurado_da_proposta__c.field-meta.xml
<CustomField>
    <fullName>Segurado_da_proposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segurado da proposta</label>
    <referenceTo>SeguradoProposta__c</referenceTo>
    <relationshipLabel>Peps</relationshipLabel>
    <relationshipName>Peps</relationshipName>
    <type>Lookup</type>
</CustomField>