workspace-sf/force-app/main/default/objects/Pep__c/recordTypes/BeneficiarioGarantia.recordType-meta.xml
<RecordType>
    <fullName>BeneficiarioGarantia</fullName>
    <active>true</active>
    <label>BeneficiarioGarantia</label>
</RecordType>