workspace-sf/force-app/main/default/objects/Pep__c/recordTypes/BenificiarioSeguradoProposta.recordType-meta.xml
<RecordType>
    <fullName>BenificiarioSeguradoProposta</fullName>
    <active>true</active>
    <label>BenificiarioSeguradoProposta</label>
</RecordType>