workspace-sf/force-app/main/default/objects/Pep__c/recordTypes/seguradoProposta.recordType-meta.xml
<RecordType>
    <fullName>seguradoProposta</fullName>
    <active>true</active>
    <label>seguradoProposta</label>
</RecordType>